[package]
name = "nf-web-prot"
version = "0.1.0"
edition = "2024"
authors = ["yatoneco"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zerocopy = { version = "0.8.30", features = ["derive"] }#  BSD-2-Clause OR Apache-2.0 OR MIT
wasm-bindgen = "0.2.114"
uuid = { version = "1.8", features = ["v4", "js"] }
serde = { version = "1.0", features = ["derive"] } # 追加
serde-wasm-bindgen = "0.6" # 追加
